--- a/app/src/main/res/layout/list_item_trait.xml
+++ b/app/src/main/res/layout/list_item_trait.xml
@@ -13,24 +13,6 @@
     android:paddingBottom="4dp"
     android:background="@drawable/cell">
 
-    <ImageView
-        android:id="@+id/dragSort"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:padding="3dp"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:src="@drawable/ic_reorder"
-        tools:ignore="ContentDescription" />
-
-    <View
-        android:id="@+id/spacer1"
-        android:layout_width="5dp"
-        android:layout_height="1dp"
-        android:layout_toEndOf="@+id/dragSort" />
-
     <CheckBox
         android:id="@+id/visible"
         android:layout_width="wrap_content"
@@ -73,5 +55,17 @@
         android:ellipsize="end"
         android:singleLine="true"
         tools:text="insect damage"/>
+
+    <ImageView
+        android:id="@+id/dragSort"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:padding="3dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:src="@drawable/ic_reorder"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
