--- a/app/src/main/res/layout/list_item_field_group_header.xml
+++ b/app/src/main/res/layout/list_item_field_group_header.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="12dp">
 
@@ -21,7 +22,7 @@
         android:id="@+id/expandIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/group_toggle_icon"
         android:src="@drawable/ic_chevron_down" />
 
 </LinearLayout>
