--- a/app/src/main/res/layout/list_item_archived_fields_header.xml
+++ b/app/src/main/res/layout/list_item_archived_fields_header.xml
@@ -4,9 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:padding="8dp"
-    android:background="@drawable/list_item_selector"
-    android:gravity="center_vertical">
+    android:padding="12dp">
 
     <TextView
         style="@style/TextViewStyle.Bold.Title"
@@ -14,8 +12,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/group_archived_value"
-        android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:gravity="start"
         android:singleLine="true"
