--- a/app/src/main/res/menu/menu_fields.xml
+++ b/app/src/main/res/menu/menu_fields.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="AppCompatResource">
     <item
         android:id="@+id/toggle_group_visibility"
@@ -32,4 +33,38 @@
         android:icon="@drawable/ic_expand"
         android:showAsAction="collapseActionView"
         android:title="@string/menu_expand_all" />
+
+
+    <item
+        android:id="@+id/menu_group_fields"
+        android:icon="@drawable/ic_group"
+        android:title="@string/menu_group"
+        android:showAsAction="always"
+        android:visible="false"/>
+    <item
+        android:id="@+id/menu_archive_fields"
+        android:icon="@drawable/ic_archive_add"
+        android:title="@string/menu_archive"
+        android:showAsAction="always"
+        android:visible="false"/>
+    <item
+        android:id="@+id/menu_select_all"
+        android:icon="@drawable/ic_tb_toggle_all"
+        android:title="@string/fields_select_all"
+        android:showAsAction="always"
+        android:visible="false"/>
+    <item
+        android:id="@+id/menu_export"
+        android:icon="@drawable/ic_file_export_outline"
+        android:title="@string/fields_export"
+        android:background="@color/WHITE"
+        android:showAsAction="ifRoom"
+        android:visible="false"/>
+
+    <item
+        android:id="@+id/menu_delete"
+        android:icon="@drawable/ic_tb_delete"
+        android:title="@string/fields_delete"
+        android:showAsAction="ifRoom"
+        android:visible="false"/>
 </menu>
