Added unset state for boolean traits

--- a/app/src/main/res/layout/list_item_trait_parameter_default_toggle_value.xml
+++ b/app/src/main/res/layout/list_item_trait_parameter_default_toggle_value.xml
@@ -24,12 +24,10 @@
         android:layout_height="wrap_content"
         app:errorEnabled="false">
 
-        <ToggleButton
+        <com.fieldbook.tracker.views.ThreeStateToggleButton
             android:id="@+id/dialog_new_trait_default_toggle_btn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textOff="@string/traits_create_false"
-            android:textOn="@string/traits_create_true" />
+            android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
