--- a/app/src/main/res/layout/trait_boolean.xml
+++ b/app/src/main/res/layout/trait_boolean.xml
@@ -29,11 +29,11 @@
         <!-- padding should be half the size of the thumb -->
         <SeekBar
             android:layout_width="128dp"
-            android:layout_height="0dp"
+            android:layout_height="42dp"
             android:paddingStart="21dp"
             android:paddingEnd="21dp"
             android:min="0"
-            android:max="1"
+            android:max="2"
             android:progressDrawable="@drawable/three_state_seek_bar_progress"
             android:thumb="@drawable/three_state_seek_bar_thumb"
             android:id="@+id/traitBooleanSeekBar"
@@ -52,6 +52,17 @@
             app:layout_constraintStart_toEndOf="@id/traitBooleanSeekBar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:id="@+id/unsetImage"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="37dp"
+            android:src="@drawable/trait_boolean_neutral"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/traitBooleanSeekBar"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
