removed redundant code fixed lint warnings in trait box code introduced move directions enum

--- a/app/src/main/res/layout/view_trait_box.xml
+++ b/app/src/main/res/layout/view_trait_box.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.fieldbook.tracker.views.ActionImageView
         android:id="@+id/traitLeft"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="@+id/traitTypeTv"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <ImageView
+    <com.fieldbook.tracker.views.ActionImageView
         android:id="@+id/traitRight"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/traitLeft" />
 
-    <TextView
+    <com.fieldbook.tracker.views.ActionTextView
         android:id="@+id/traitDetails"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
