--- a/app/src/main/res/menu/menu_fields.xml
+++ b/app/src/main/res/menu/menu_fields.xml
@@ -6,32 +6,32 @@
     <item
         android:id="@+id/toggle_group_visibility"
         android:icon="@drawable/ic_existing_group"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/menu_groups_toggle" />
     <item
         android:id="@+id/help"
         android:icon="@drawable/ic_tb_help"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/tutorial_dialog_title" />
     <item
         android:id="@+id/action_select_plot_by_distance"
         android:icon="@drawable/ic_explore_black_24dp"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:title="@string/menu_fields_plot_by_distance_title" />
     <item
         android:id="@+id/sortFields"
         android:icon="@drawable/ic_sort"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:title="@string/menu_fields_sort_list" />
     <item
         android:id="@+id/collapseGroups"
         android:icon="@drawable/ic_collapse"
-        android:showAsAction="collapseActionView"
+        app:showAsAction="collapseActionView"
         android:title="@string/menu_collapse_all" />
     <item
         android:id="@+id/expandGroups"
         android:icon="@drawable/ic_expand"
-        android:showAsAction="collapseActionView"
+        app:showAsAction="collapseActionView"
         android:title="@string/menu_expand_all" />
 
 
@@ -39,32 +39,32 @@
         android:id="@+id/menu_group_fields"
         android:icon="@drawable/ic_group"
         android:title="@string/menu_group"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:visible="false"/>
     <item
         android:id="@+id/menu_archive_fields"
         android:icon="@drawable/ic_archive_add"
         android:title="@string/menu_archive"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:visible="false"/>
     <item
         android:id="@+id/menu_select_all"
         android:icon="@drawable/ic_tb_toggle_all"
         android:title="@string/fields_select_all"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:visible="false"/>
     <item
         android:id="@+id/menu_export"
         android:icon="@drawable/ic_file_export_outline"
         android:title="@string/fields_export"
         android:background="@color/WHITE"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:visible="false"/>
 
     <item
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_tb_delete"
         android:title="@string/fields_delete"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:visible="false"/>
 </menu>
