Add option to toggle progress bars

--- a/app/src/main/res/xml/preferences_appearance.xml
+++ b/app/src/main/res/xml/preferences_appearance.xml
@@ -55,5 +55,19 @@
             android:summary="@string/preferences_appearance_infobar_hide_prefix_description"
             android:title="@string/preferences_appearance_infobar_hide_prefix" />
 
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:icon="@drawable/ic_range_progress"
+            android:key="RANGE_PROGRESS_BAR"
+            android:summary="@string/preferences_appearance_range_progress_bar_description"
+            android:title="@string/preferences_appearance_range_progress_bar" />
+
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:icon="@drawable/ic_traits_progress"
+            android:key="TRAITS_PROGRESS_BAR"
+            android:summary="@string/preferences_appearance_traits_progress_bar_description"
+            android:title="@string/preferences_appearance_traits_progress_bar" />
+
     </PreferenceCategory>
 </PreferenceScreen>
