--- a/app/src/main/res/layout/activity_brapi_programs.xml
+++ b/app/src/main/res/layout/activity_brapi_programs.xml
@@ -69,7 +69,7 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="bottom|center"
