--- a/app/src/main/res/layout/list_item_graph_line_selector.xml
+++ b/app/src/main/res/layout/list_item_graph_line_selector.xml
@@ -22,6 +22,33 @@
         app:layout_constraintEnd_toEndOf="@id/line_selector_color"
         app:layout_constraintBottom_toBottomOf="@id/line_selector_color"/>
 
+    <ProgressBar style="@style/ProgressBarStyle"
+        android:visibility="gone"
+        android:elevation="2dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/progress_bar"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/WHITE"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:visibility="gone"
+        android:elevation="2dp"
+        android:layout_margin="8dp"
+        android:id="@+id/image_view"
+        android:contentDescription="@string/list_item_color_placeholder_content_description"
+        android:src="@drawable/ic_hourglass_empty_black_24dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/progress_bar"
+        app:layout_constraintEnd_toEndOf="@id/progress_bar"
+        app:layout_constraintTop_toTopOf="@id/progress_bar"
+        app:layout_constraintBottom_toBottomOf="@id/progress_bar"/>
+
     <View
         android:background="@drawable/cell"
         android:layout_width="@dimen/fb_trait_line_graph_selector_size"
