--- a/app/src/main/res/layout/activity_field_creator.xml
+++ b/app/src/main/res/layout/activity_field_creator.xml
@@ -14,6 +14,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/field_creator_stepper"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/field_creator_toolbar" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/field_creator_nav_host"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -21,7 +30,7 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:navGraph="@navigation/field_creator_graph"
-        app:layout_constraintTop_toBottomOf="@+id/field_creator_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/field_creator_stepper"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
