--- a/app/src/main/res/layout/fragment_field_creator_size.xml
+++ b/app/src/main/res/layout/fragment_field_creator_size.xml
@@ -17,15 +17,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/field_creator_stepper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_text" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/field_name_input_layout"
         android:layout_width="0dp"
@@ -35,12 +26,13 @@
         app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/field_creator_stepper">
+        app:layout_constraintTop_toBottomOf="@id/title_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/field_name_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,7 +61,8 @@
                 android:id="@+id/rows_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number" />
+                android:inputType="number"
+                android:imeOptions="actionNext" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -85,7 +78,8 @@
                 android:id="@+id/cols_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number" />
+                android:inputType="number"
+                android:imeOptions="actionDone" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
